AboutMe item aligned, Modal background close ug fixed, Modal Open h1 bug fixed, CarouselButtons click bug fixed

--- a/Desktop/portfolio-master/portfolio/src/components/about-me/about-me.css
+++ b/Desktop/portfolio-master/portfolio/src/components/about-me/about-me.css
@@ -35,6 +35,7 @@
 	width: 70%;
 	align-items: center;
 	align-self: center;
+	margin-top: 5px;
 }
 
 .download {
@@ -48,11 +49,12 @@
 	color: white;
 	width: 250px;
 	height: 40px;
+	margin: 15px;
 }
 
 @media (max-width: 450px) {
 	.about-me-wrapper {
-		padding-top: 80px;
+		/* padding-top: 80px; */
 	}
 	.about-me-img {
 		width: 100%;
