--- a/Desktop/portfolio-master/portfolio/src/components/carousel-controls/CarouselControls.css
+++ b/Desktop/portfolio-master/portfolio/src/components/carousel-controls/CarouselControls.css
@@ -4,7 +4,7 @@
 	align-self: center;
 	width: 100%;
 	height: 25px;
-	margin-bottom: -18px;
+	/* margin-bottom: -18px; */
 	padding-bottom: 2px;
 
 	background: grey;
