--- a/Desktop/portfolio-master/portfolio/src/components/social-media-nav/social-media-nav.css
+++ b/Desktop/portfolio-master/portfolio/src/components/social-media-nav/social-media-nav.css
@@ -4,7 +4,8 @@ nav {
 .social-nav-btns {
 	display: flex;
 	justify-content: space-around;
-	width: 100%;
+    width: 100%;
+    margin: 10px;
 }
 
 .social-nav-btns.about-me {
